--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -4,7 +4,8 @@
 		"stdlib.h": "c",
 		"fcntl.h": "c",
 		"stdarg.h": "c",
-		"unistd.h": "c"
+		"unistd.h": "c",
+		"mlx_int.h": "c"
 	},
 	"C_Cpp.errorSquiggles": "disabled"
 }
